--- a/styles/proto.css
+++ b/styles/proto.css
@@ -8,10 +8,12 @@ body{
 .btn-primary{
   margin: 5px;
   padding: 10px;
+  color: #fff;
 }
 .btn-success{
   margin: 5px;
   padding: 10px;
+  color: #fff;
 }
 .site-footer
 {
