--- a/styles/login.css
+++ b/styles/login.css
@@ -1,5 +1,7 @@
 .jumbotron{
     text-align: center;
+    background: none;
+    color: #fff;
 }
 body{
     padding-bottom:4.2rem;
@@ -9,7 +11,7 @@ body{
      text-decoration:none !important;
      }
      h1,h2,h3{
-     font-family: 'Kaushan Script', cursive;
+     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
      }
       .myform{
     position: relative;
