--- a/styles/login.css
+++ b/styles/login.css
@@ -9,7 +9,7 @@ body{
      text-decoration:none !important;
      }
      h1,h2,h3{
-     font-family: 'Kaushan Script', cursive;
+     font-family: 'HACKED', cursive;
      }
       .myform{
     position: relative;
