--- a/styles/proto.css
+++ b/styles/proto.css
@@ -178,3 +178,28 @@ body{
     font-weight:600
   }
 }
+
+.box{
+    width: 250px;
+    height: 300px;
+    background: orange;
+    margin: 0px 10px;
+    transition: 1s;
+
+  }
+  .box:hover{
+    transform: scale(1.3);
+    background: #ff800a;
+    z-index: 2;
+    box-shadow: 2px 2px 2px #000;
+    
+  }
+  .container2{
+    width: 90%;
+    padding: 20px;
+    margin: 100px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
